# WarTheatreSimulator

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  README.md  cmake_install.cmake  example1  fields.csv  output.puml  units.csv  wts
doc/: class_diagram.puml  class_diagram.xmi  doxygen-header.html  header.tex  object_diagram.puml
doc/html/: README_8md.html  Units_8h_source.html  a_8cpp_source.html  annotated.html  annotated_dup.js  area_8h.html  area_8h.js  area_8h__dep__incl.map  area_8h__dep__incl.md5  area_8h__incl.map  area_8h__incl.md5  area_8h_source.html  areamanager_8h.html  areamanager_8h.js  areamanager_8h__incl.map  areamanager_8h__incl.md5  areamanager_8h_source.html  battle_8h.html  battle_8h.js  battle_8h__incl.map  battle_8h__incl.md5  battle_8h_source.html  calculateexampleinfantryfire_8py.html  calculateexampleinfantryfire_8py.js  calculateexampleinfantryfire_8py_source.html  classArea-members.html  classArea.html  classArea.js  classAreaManager-members.html  classAreaManager.html  classAreaManager.js  classAreaManager__coll__graph.map  classArea__coll__graph.map  (+137 more)
include/: area.h  areaManager.h  areamanager.h  battle.h  field.h  infrastructure.h  mapeditor.h  theatrecontroller.h  units.h  utilities.h
src/: CMakeLists.txt  area.cpp  areamanager.cpp  battle.cpp  field.cpp  infrastructure.cpp  main.cpp  mapeditor.cpp  theatrecontroller.cpp  units.cpp  utilities.cpp
test/: TEST.MD  example1.cpp  example1map.png~  example1map.wts  examplegame.cpp
tmpvenv/: pyvenv.cfg
tools/: calculateexampleinfantryfire.py  generatepdf.sh
(+120 files in other folders)
